src/imports/rasterrenderer/batchrenderer.h
@@ -74,6 +74,7 @@ private:
 
     int m_cacheSize = 2;
     QHash<LottieAnimation *, Entry *> m_animData;
+    int m_lastRenderedFrame = -1;
 };
 
 QT_END_NAMESPACE
